Mac: Correct CALayer reuse logic

This is a bug in how we construct the CALayer tree. The code
originally assumed that we would always re-use the old CALayer
if it existed. This is no longer the case now that we sometimes
use AVSampleBufferDisplayLayers.

With this patch, we ensure that we always put the new CALayer
in the position of the old CALayer.

A unit test for this is coming in another patch, but this one is
being merged back to M52, and the unit test files have changed
dramatically.

BUG=618287

Review-Url: https://codereview.chromium.org/2181713004
Cr-Commit-Position: refs/heads/master@{#407561}

Former-commit-id: 4eff049bf6baef15d02a9c2d019a38e4a50c9731